--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
   "bugs": {
     "url": "https://github.com/unit-mesh/autodev-remote-agent-action/issues"
   },
-  "homepage": "https://github.com/unit-mesh/autodev-remote-agent-action#readme",  "dependencies": {
+  "homepage": "https://github.com/unit-mesh/autodev-remote-agent-action#readme",
+  "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@autodev/github-agent": "^0.4.1",
     "@autodev/context-worker": "^0.4.1",
+    "@autodev/github-agent": "^0.4.1",
     "@autodev/worker-core": "^0.4.1",
+    "@mixmark-io/domino": "^2.2.0",
     "@octokit/rest": "^20.1.2",
     "@octokit/webhooks": "^12.0.10",
     "@octokit/webhooks-types": "^7.3.2",
