--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,19 +20,23 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      
+
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
       - name: 📥 Install Dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: 🔍 Lint Code
-        run: npm run lint
-      
+        run: pnpm run lint
+
       - name: 🧪 Run Tests
-        run: npm test
-      
+        run: pnpm test
+
       - name: 🔨 Build Project
-        run: npm run build:clean
+        run: pnpm run build:clean
       
       - name: 📤 Upload Build Artifacts
         uses: actions/upload-artifact@v4
@@ -55,13 +59,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      
+
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
       - name: 📥 Install Dependencies
-        run: npm ci
-      
+        run: pnpm install --frozen-lockfile
+
       - name: 🔨 Build Project
-        run: npm run build:clean
+        run: pnpm run build:clean
       
       - name: 🧪 Test Action Locally
         run: node dist/index.js --help || true
@@ -82,14 +90,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
-      
+
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
       - name: 📥 Install Dependencies
-        run: npm ci
-      
+        run: pnpm install --frozen-lockfile
+
       - name: 🔨 Build Project
-        run: npm run build:clean
+        run: pnpm run build:clean
       
       - name: 📤 Download Build Artifacts
         uses: actions/download-artifact@v4
@@ -98,7 +110,7 @@ jobs:
           path: dist/
       
       - name: 🚀 Publish to NPM
-        run: npm publish
+        run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       
