--- a/.github/workflows/issue-analysis.yml
+++ b/.github/workflows/issue-analysis.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Install Ripgrep
+        run: sudo apt-get update && sudo apt-get install -y ripgrep
       
       - name: 🔍 Analyze Issue with AutoDev
         uses: unit-mesh/autodev-remote-agent-action@v0.3.5
