docs: 更新用户配置文档，添加透明度功能说明
- 更新 README.md 添加新的文件过滤配置选项
- 新增 CONFIGURATION.md 完整配置指南
- 更新 action.yml 添加文件过滤输入参数
- 更新 MARKETPLACE.md 突出透明度功能
- 添加 examples/advanced-workflow.yml 展示高级用法
- 提供详细的配置示例和最佳实践
- 解释透明度功能如何帮助用户理解分析过程

主要更新：
- 文件过滤配置选项 (include-config-files, include-test-files 等)
- 透明度功能说明和示例
- 不同使用场景的配置示例
- 故障排除和性能优化建议
- 安全考虑和最佳实践

--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,31 @@ inputs:
     required: false
     default: ''
 
+  include-config-files:
+    description: 'Include configuration files in analysis (jest.config.js, rollup.config.mjs, etc.)'
+    required: false
+    default: 'true'
+
+  include-test-files:
+    description: 'Include test files in analysis (__tests__/, *.test.js, etc.)'
+    required: false
+    default: 'true'
+
+  include-patterns:
+    description: 'Comma-separated list of file patterns to force include in analysis'
+    required: false
+    default: ''
+
+  exclude-patterns:
+    description: 'Comma-separated list of file patterns to exclude from analysis'
+    required: false
+    default: ''
+
+  force-include-files:
+    description: 'Comma-separated list of specific files to always include in analysis'
+    required: false
+    default: ''
+
 outputs:
   success:
     description: 'Whether the analysis was successful'
