feat: rename project from 'AutoDev GitHub Agent Action' to 'AutoDev Remote Agent'
- Update all documentation files to use the new name
- Update action.yml name field
- Update package.json description
- Update source code comments and descriptions
- Maintain backward compatibility for CLI commands and repository URLs

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'AutoDev GitHub Agent Action'
+name: 'AutoDev Remote Agent'
 description: 'Automated GitHub issue analysis using AI-powered code analysis'
 author: 'AutoDev authors'
 
