--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@autodev/context-worker": "^0.7.1",
-    "@autodev/github-agent": "^0.7.1",
+    "@autodev/remote-agent": "^0.7.1",
     "@autodev/worker-core": "^0.7.1",
     "@mixmark-io/domino": "^2.2.0",
     "@octokit/rest": "^20.1.2",
